# cellauto3d

./: .gitignore  Cargo.toml  README.md
src/: cli.rs  gradient.rs  helptext.rs  lib.rs  main.rs  rules.rs  system.rs  update.rs
